# KruskalXPrim

./: CMakeLists.txt  Graph.cpp  Graph.hpp  MST.cpp  MST.hpp  README.md  UnionFind.cpp  UnionFind.hpp  graph.hpp  main.cpp
tests/: GraphTest.cpp  MSTTest.cpp  UnionFindTest.cpp
tests/graphs/: complete-200.txt  complete-400.txt  complete-600.txt
